hphp/hack/test/typecheck/open_tuples/tuple_open_syntax_bad.php.exp
ERROR: File "tuple_open_syntax_bad.php", line 6, characters 11-36:
There must be no required elements following an optional element (Parsing[1002])
ERROR: File "tuple_open_syntax_bad.php", line 7, characters 11-34:
Cannot use `optional` on variadic parameters (Parsing[1002])
ERROR: File "tuple_open_syntax_bad.php", line 8, characters 11-46:
There must be only one variadic element (Parsing[1002])
ERROR: File "tuple_open_syntax_bad.php", line 9, characters 11-23:
There must be no elements following a variadic element (Parsing[1002])
ERROR: File "tuple_open_syntax_bad.php", line 10, characters 11-34:
There must be no elements following a variadic element (Parsing[1002])
